--- a/untitled.html
+++ b/untitled.html
@@ -26,12 +26,13 @@
     }
 
     label::after {
-      -webkit-transition: opacity 1.25s;
+      -webkit-transition: opacity 1s;
       opacity: 0;
       content: attr(message);
     }
 
     label.active::after {
+      -webkit-transition-delay: 1s;
       opacity: 1;
     }
 
@@ -48,23 +49,25 @@
 
     var classes = ["default", "whats-up", "not-much"];
 
+    var i = 0;
+
     var label = function(i) {
       return $("label." + classes[i]);
     };
 
-    var iGotPressed = (function(i) {
-      return function() {
-        var oldLabel = label(i);
-        i = (i + 1) % 3;
-        var newLabel = label(i);
-        oldLabel.removeClass('active');
-        newLabel.addClass('active');
-      }
-    })(0);
+    var iGotPressed = function() {
+      var oldLabel = label(i);
+      i = (i + 1) % 3;
+      var newLabel = label(i);
+      oldLabel.removeClass('active');
+      newLabel.addClass('active');
+    };
 
-    $(function() {
+    var makeItSo = function() {
       $("#the-button").click(iGotPressed);
-    });
+    };
+
+    $(makeItSo);
 
   </script>
 </body>
