--- a/untitled.html
+++ b/untitled.html
@@ -28,11 +28,21 @@
     label::after {
       -webkit-transition: opacity 1s;
       opacity: 0;
-      content: attr(message);
+    }
+
+    label.whats-up::after {
+      content: attr(whats-up);
+    }
+
+    label.default::after {
+      content: attr(default);
+    }
+
+    label.not-much::after {
+      content: attr(not-much);
     }
 
     label.active::after {
-      -webkit-transition-delay: 1s;
       opacity: 1;
     }
 
@@ -40,31 +50,30 @@
 </head>
 <body>
   <p>
-    <label message="Nothing to see here. Just the default state." class="default active"></label>
-    <label message="What's up?" class="whats-up"></label>
-    <label message="Not much." class="not-much"></label>
+    <label class="default active" default="Nothing to see here. Just the default state."
+                                  whats-up="What's up?"
+                                  not-much="Not much."></label>
   </p>
-  <button id="the-button">Click me</button>
+  <button>Click me</button>
   <script>
 
     var classes = ["default", "whats-up", "not-much"];
-
+    var numClasses = classes.length;
     var i = 0;
-
-    var label = function(i) {
-      return $("label." + classes[i]);
-    };
+    var theLabel;
 
     var iGotPressed = function() {
-      var oldLabel = label(i);
-      i = (i + 1) % 3;
-      var newLabel = label(i);
-      oldLabel.removeClass('active');
-      newLabel.addClass('active');
+      theLabel.removeClass('active');
+      setTimeout(function() {
+        theLabel.removeClass(classes[i]);
+        i = (i + 1) % numClasses;
+        theLabel.addClass(classes[i] + ' active');
+      }, 1000);
     };
 
     var makeItSo = function() {
-      $("#the-button").click(iGotPressed);
+      theLabel = $('label');
+      $('button').click(iGotPressed);
     };
 
     $(makeItSo);
