--- a/untitled.html
+++ b/untitled.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <script src="jquery.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
   <style>
 
     button {
